--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,9 @@
 <h1>Welcome, {{user.username}}</h1>
 
+<div class="">
+  <h3>give this link to your friends:</h3>
+  <h2><a href="/ponzert/{{user.id}}">http://localhost:3000/ponzert/{{user.id}}</a></h2>
+</div>
 
 
-
-{{user}}
+<pre>{{user}}</pre>
